--- a/HackerNews/CommentTableViewCell.xib
+++ b/HackerNews/CommentTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1077" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -7,8 +7,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="commentsCell" rowHeight="150" id="JlN-rQ-9j1" customClass="CommentTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="commentsCell" rowHeight="190" id="JlN-rQ-9j1" customClass="CommentTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="190"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JlN-rQ-9j1" id="cKg-4E-FgZ">
                 <autoresizingMask key="autoresizingMask"/>
@@ -40,8 +40,8 @@
                         <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MHl-40-q4W">
-                        <rect key="frame" x="19" y="37" width="292" height="98"/>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="749" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MHl-40-q4W">
+                        <rect key="frame" x="19" y="37" width="292" height="100"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -49,30 +49,68 @@
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES"/>
                     </textView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CommentTableCell" translatesAutoresizingMaskIntoConstraints="NO" id="9yq-1M-rtP">
+                        <rect key="frame" x="275" y="145" width="36" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="36" id="4ns-o9-jQd"/>
+                            <constraint firstAttribute="height" constant="30" id="JHw-yW-Lv0"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="JHw-yW-Lv0"/>
+                            </mask>
+                        </variation>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="123" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rf7-29-jVn">
+                        <rect key="frame" x="279" y="151" width="21" height="14"/>
+                        <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="10"/>
+                        <color key="textColor" red="0.74117647058823533" green="0.74117647058823533" blue="0.73333333333333328" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailingMargin" secondItem="rf7-29-jVn" secondAttribute="trailing" constant="12" id="4yM-Og-9RJ"/>
+                    <constraint firstItem="rf7-29-jVn" firstAttribute="leading" secondItem="cKg-4E-FgZ" secondAttribute="leadingMargin" constant="271" id="8tB-NB-GaY"/>
+                    <constraint firstItem="9yq-1M-rtP" firstAttribute="top" secondItem="MHl-40-q4W" secondAttribute="bottom" constant="8" id="B44-1x-dRb"/>
                     <constraint firstItem="MHl-40-q4W" firstAttribute="leading" secondItem="cKg-4E-FgZ" secondAttribute="leadingMargin" constant="11" id="EUn-Mk-oWD"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="9yq-1M-rtP" secondAttribute="bottom" constant="6" id="EoG-r4-NfT"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="9yq-1M-rtP" secondAttribute="trailing" constant="1" id="F9x-7U-Gdd"/>
                     <constraint firstItem="ulc-20-Knj" firstAttribute="leading" secondItem="J6f-Aj-t1s" secondAttribute="trailing" constant="5" id="HvP-WL-WPJ"/>
                     <constraint firstItem="MHl-40-q4W" firstAttribute="top" secondItem="yFf-ns-OMY" secondAttribute="bottom" constant="8" id="Mnp-lc-tb2"/>
+                    <constraint firstItem="rf7-29-jVn" firstAttribute="top" secondItem="MHl-40-q4W" secondAttribute="bottom" constant="9" id="PKt-we-i7X"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="rf7-29-jVn" secondAttribute="bottom" constant="16" id="Q9Z-3U-aCW"/>
                     <constraint firstAttribute="trailingMargin" secondItem="yFf-ns-OMY" secondAttribute="trailing" constant="1" id="VEQ-IL-Awo"/>
                     <constraint firstAttribute="trailingMargin" secondItem="MHl-40-q4W" secondAttribute="trailing" constant="1" id="W1T-6t-6Y8"/>
+                    <constraint firstItem="9yq-1M-rtP" firstAttribute="leading" secondItem="cKg-4E-FgZ" secondAttribute="leadingMargin" constant="267" id="bXQ-Ka-oiR"/>
                     <constraint firstItem="J6f-Aj-t1s" firstAttribute="top" secondItem="cKg-4E-FgZ" secondAttribute="top" constant="9" id="blc-Q0-cPh"/>
                     <constraint firstItem="yFf-ns-OMY" firstAttribute="leading" secondItem="ulc-20-Knj" secondAttribute="trailing" constant="8" id="cOy-2c-fdR"/>
                     <constraint firstItem="ulc-20-Knj" firstAttribute="top" secondItem="cKg-4E-FgZ" secondAttribute="topMargin" id="fgi-8t-hDq"/>
                     <constraint firstItem="yFf-ns-OMY" firstAttribute="top" secondItem="cKg-4E-FgZ" secondAttribute="topMargin" id="fpW-ZL-Xvr"/>
                     <constraint firstItem="J6f-Aj-t1s" firstAttribute="leading" secondItem="cKg-4E-FgZ" secondAttribute="leading" constant="19" id="qEe-BU-fKu"/>
+                    <constraint firstItem="9yq-1M-rtP" firstAttribute="top" secondItem="MHl-40-q4W" secondAttribute="bottom" constant="8" id="skl-Ck-Hfo"/>
                     <constraint firstAttribute="bottomMargin" secondItem="MHl-40-q4W" secondAttribute="bottom" constant="6" id="sl3-pw-S6d"/>
+                    <constraint firstItem="9yq-1M-rtP" firstAttribute="top" secondItem="MHl-40-q4W" secondAttribute="bottom" constant="8" id="yXT-Gb-mIF"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="sl3-pw-S6d"/>
+                        <exclude reference="skl-Ck-Hfo"/>
+                        <exclude reference="PKt-we-i7X"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
+                <outlet property="childCommentBGImage" destination="9yq-1M-rtP" id="xDa-PG-vLD"/>
+                <outlet property="childCommentCount" destination="rf7-29-jVn" id="4KO-bt-ycZ"/>
                 <outlet property="commentTextView" destination="MHl-40-q4W" id="bka-v6-tts"/>
                 <outlet property="timeLabel" destination="yFf-ns-OMY" id="ujh-I9-WzT"/>
                 <outlet property="userLabel" destination="ulc-20-Knj" id="0vL-i8-fSz"/>
             </connections>
-            <point key="canvasLocation" x="104" y="-324"/>
+            <point key="canvasLocation" x="104" y="-306"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="CommentTableCell" width="38" height="30"/>
         <image name="userFull" width="20" height="21"/>
     </resources>
 </document>
