--- a/HackerNews/CommentTableViewCell.xib
+++ b/HackerNews/CommentTableViewCell.xib
@@ -60,11 +60,13 @@
                             <outlet property="delegate" destination="JlN-rQ-9j1" id="64V-a8-Yxa"/>
                         </connections>
                     </textView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CommentTableCell" translatesAutoresizingMaskIntoConstraints="NO" id="9yq-1M-rtP">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CommentTableCell" translatesAutoresizingMaskIntoConstraints="NO" id="9yq-1M-rtP">
                         <rect key="frame" x="275" y="145" width="36" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="36" id="4ns-o9-jQd"/>
                             <constraint firstAttribute="height" constant="30" id="JHw-yW-Lv0"/>
+                            <constraint firstAttribute="height" constant="30" id="wMH-hu-Plj"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="36" id="x5X-RF-hl1"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -73,13 +75,18 @@
                         </variation>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="123" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rf7-29-jVn">
-                        <rect key="frame" x="279" y="151" width="21" height="14"/>
+                        <rect key="frame" x="280" y="151" width="18" height="14"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="14" id="R9R-d6-TJb"/>
+                            <constraint firstAttribute="width" constant="18" id="zJk-03-TxN"/>
+                        </constraints>
                         <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="10"/>
                         <color key="textColor" red="0.74117647058823533" green="0.74117647058823533" blue="0.73333333333333328" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailingMargin" secondItem="9yq-1M-rtP" secondAttribute="trailing" constant="1" id="4Jh-rR-v6D"/>
                     <constraint firstAttribute="trailingMargin" secondItem="rf7-29-jVn" secondAttribute="trailing" constant="12" id="4yM-Og-9RJ"/>
                     <constraint firstItem="rf7-29-jVn" firstAttribute="leading" secondItem="cKg-4E-FgZ" secondAttribute="leadingMargin" constant="271" id="8tB-NB-GaY"/>
                     <constraint firstItem="9yq-1M-rtP" firstAttribute="top" secondItem="MHl-40-q4W" secondAttribute="bottom" constant="8" id="B44-1x-dRb"/>
@@ -92,6 +99,7 @@
                     <constraint firstAttribute="bottomMargin" secondItem="rf7-29-jVn" secondAttribute="bottom" constant="16" id="Q9Z-3U-aCW"/>
                     <constraint firstAttribute="trailingMargin" secondItem="yFf-ns-OMY" secondAttribute="trailing" constant="1" id="VEQ-IL-Awo"/>
                     <constraint firstAttribute="trailingMargin" secondItem="MHl-40-q4W" secondAttribute="trailing" constant="1" id="W1T-6t-6Y8"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="rf7-29-jVn" secondAttribute="trailing" constant="14" id="ZkW-v0-oXm"/>
                     <constraint firstItem="9yq-1M-rtP" firstAttribute="leading" secondItem="cKg-4E-FgZ" secondAttribute="leadingMargin" constant="267" id="bXQ-Ka-oiR"/>
                     <constraint firstItem="J6f-Aj-t1s" firstAttribute="top" secondItem="cKg-4E-FgZ" secondAttribute="top" constant="9" id="blc-Q0-cPh"/>
                     <constraint firstItem="yFf-ns-OMY" firstAttribute="leading" secondItem="ulc-20-Knj" secondAttribute="trailing" constant="8" id="cOy-2c-fdR"/>
@@ -105,7 +113,11 @@
                 <variation key="default">
                     <mask key="constraints">
                         <exclude reference="sl3-pw-S6d"/>
+                        <exclude reference="bXQ-Ka-oiR"/>
                         <exclude reference="skl-Ck-Hfo"/>
+                        <exclude reference="yXT-Gb-mIF"/>
+                        <exclude reference="4yM-Og-9RJ"/>
+                        <exclude reference="8tB-NB-GaY"/>
                         <exclude reference="PKt-we-i7X"/>
                     </mask>
                 </variation>
